Setting up mocha, checking in initial typings

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/Microsoft/Sonoma-cli#readme",
   "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.0.2",
+    "ts-node": "^1.3.0",
     "typescript": "^1.8.10"
   }
 }
