--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.0.2",
+    "nock": "^8.0.0",
     "rimraf": "^2.5.4",
     "ts-node": "^1.3.0",
     "typescript": "^1.8.10"
