--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "mocha --compilers ts:ts-node/register",
+    "test": "mocha --compilers ts:ts-node/register --recursive ./test/**/*-test.[tj]s",
     "clean": "rimraf dist"
   },
   "repository": {
