--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "rimraf": "^2.5.4",
     "ts-node": "^1.3.0",
     "typescript": "^1.8.10"
+  },
+  "dependencies": {
+    "debug": "^2.2.0"
   }
 }
