--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mocha": "^3.0.2",
     "nock": "^8.0.0",
     "rimraf": "^2.5.4",
+    "sinon": "^1.17.6",
     "ts-node": "^1.3.0",
     "typescript": "^1.8.10"
   },
