--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "sonoma-cli",
   "version": "0.0.1",
   "description": "Command line tool for Sonoma",
+  "engine": {
+    "node": ">= 6.3.0"
+  },
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
