Dropped hand-rolled option parser in favor of minimist
Using minimist to do the low level command line parsing, it's close enough
and saves a ton of work on corner cases.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^1.8.10"
   },
   "dependencies": {
-    "debug": "^2.2.0"
+    "debug": "^2.2.0",
+    "minimist": "^1.2.0"
   }
 }
