--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "dist/index.js",
   "scripts": {
-    "build": "gulp build",
+    "build": "tsc",
     "test": "mocha --compilers ts:ts-node/register --recursive ./test/**/*-test.[tj]s",
     "watch-test": "mocha --compilers ts:ts-node/register --recursive ./test/**/*-test.[tj]s --watch",
     "clean": "rimraf dist"
@@ -24,9 +24,6 @@
   "homepage": "https://github.com/Microsoft/Sonoma-cli#readme",
   "devDependencies": {
     "chai": "^3.5.0",
-    "gulp": "^3.9.1",
-    "gulp-cli": "^1.2.2",
-    "gulp-typescript": "^3.0.1",
     "mocha": "^3.0.2",
     "nock": "^8.0.0",
     "rimraf": "^2.5.4",
