Profile list works!

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "node-fetch": "^1.6.1",
-    "promptly": "^2.1.0"
+    "promptly": "^2.1.0",
+    "wordwrap": "^1.0.0"
   }
 }
