--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "cli-spinner": "^0.2.5",
     "debug": "^2.2.0",
+    "inquirer": "^1.1.3",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "node-fetch": "^1.6.1",
