Hand tweaks to get it to compile.
Hand added definition of ServiceClientCredentials to generated .d.ts file.
Filed https://github.com/Azure/autorest/issues/1467 to get it fixed in
the generator.

Tweaked tsconfig.json so that it copies the generated code to dist as well
as the compiled typescript.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "outDir": "dist",
         "noImplicitAny": true,
         "experimentalDecorators": true,
-        "sourceMap": false
+        "sourceMap": false,
+        "allowJs": true
     },
     "exclude": [
         "node_modules",
