--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   },
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "gulp build",
     "test": "mocha --compilers ts:ts-node/register --recursive ./test/**/*-test.[tj]s",
     "watch-test": "mocha --compilers ts:ts-node/register --recursive ./test/**/*-test.[tj]s --watch",
-    "clean": "rimraf dist"
+    "clean": "gulp clean"
   },
   "repository": {
     "type": "git",
@@ -24,12 +24,14 @@
   "homepage": "https://github.com/Microsoft/Sonoma-cli#readme",
   "devDependencies": {
     "chai": "^3.5.0",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.0.2",
     "mocha": "^3.0.2",
     "nock": "^8.0.0",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
     "ts-node": "^1.3.0",
-    "typescript": "^1.8.10"
+    "typescript": "^2.0.3"
   },
   "dependencies": {
     "cli-spinner": "^0.2.5",
