--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "noImplicitAny": true,
         "experimentalDecorators": true,
         "sourceMap": false,
-        "allowJs": true
+        "allowJs": false
     },
     "exclude": [
         "node_modules",
