Getting login working with new generated client

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "gulp build",
     "test": "mocha --compilers ts:ts-node/register --recursive ./test/**/*-test.[tj]s",
     "watch-test": "mocha --compilers ts:ts-node/register --recursive ./test/**/*-test.[tj]s --watch",
-    "autorest": "autorest -i swagger/bifrost.swagger.json -AddCredentials true -ClientName SonomaClient -CodeGenerator NodeJS -OutputDirectory ./src/util/apis/generated -ft 3",
+    "autorest": "gulp autorest",
     "clean": "gulp clean"
   },
   "repository": {
