--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
   },
   "dependencies": {
     "cli-spinner": "^0.2.5",
+    "cli-table2": "^0.2.0",
     "debug": "^2.2.0",
     "inquirer": "^1.1.3",
+    "lodash": "^4.16.4",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "ms-rest": "^1.15.0",
