--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cli-spinner": "^0.2.5",
     "cli-table2": "^0.2.0",
     "debug": "^2.2.0",
+    "glob": "^7.1.1",
     "inquirer": "^1.1.3",
     "lodash": "^4.16.4",
     "minimist": "^1.2.0",
