--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "nock": "^8.0.0",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
+    "temp": "^0.8.3",
     "ts-node": "^1.3.0",
     "typescript": "^2.0.3"
   },
   "dependencies": {
+    "adm-zip": "^0.4.7",
     "cli-spinner": "^0.2.5",
     "cli-table2": "^0.2.0",
     "debug": "^2.2.0",
