--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nock": "^8.0.0",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
+    "temp": "^0.8.3",
     "ts-node": "^1.3.0",
     "typescript": "^2.0.3"
   },
