--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,22 @@
   // See https://go.microsoft.com/fwlink/?LinkId=733558
   // for the documentation about the tasks.json format
   "version": "0.1.0",
-  "command": "tsc",
-  "isShellCommand": false,
-  "args": ["-p", ".", "--sourceMap"],
-  "showOutput": "always",
-  "problemMatcher": "$tsc"
+  "command": "gulp",
+  "isShellCommand": true,
+  "args": [
+    "--no-color"
+  ],
+  "tasks": [
+    {
+      "taskName": "build",
+      "args": [],
+      "isBuildCommand": true,
+      "isWatching": false,
+      "problemMatcher": [
+        "$lessCompile",
+        "$tsc",
+        "$jshint"
+      ]
+    }
+  ]
 }
