--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "debug": "^2.2.0",
     "event-stream": "^3.3.4",
     "glob": "^7.1.1",
+    "gulp-sourcemaps": "^2.2.0",
     "inquirer": "^1.1.3",
     "lodash": "^4.16.4",
     "minimist": "^1.2.0",
