--- a/package.json
+++ b/package.json
@@ -37,17 +37,17 @@
   },
   "dependencies": {
     "adm-zip": "^0.4.7",
-    "async": "^2.1.2",
     "cli-spinner": "^0.2.5",
     "cli-table2": "^0.2.0",
     "debug": "^2.2.0",
-    "glob": "^7.1.1",
     "event-stream": "^3.3.4",
+    "glob": "^7.1.1",
     "inquirer": "^1.1.3",
     "lodash": "^4.16.4",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "ms-rest": "^1.15.0",
+    "p-limit": "^1.0.0",
     "request": "^2.76.0",
     "rx": "^4.1.0",
     "wordwrap": "^1.0.0"
