Test Cloud: adding additional parameters to 'prepare appium' command

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "outDir": "dist",
         "noImplicitAny": true,
         "experimentalDecorators": true,
-        "sourceMap": false,
+        "sourceMap": true,
         "allowJs": false
     },
     "exclude": [
