--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,12 +2,23 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Launch TypeScript",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceRoot}/src/index.ts",
+      "cwd": "${workspaceRoot}/dist",
+      "args": ["tests", "prepare", "appium", "--build-dir", "D:\\Projects\\Uploader\\iOS\\workspace", "--debug"],
+      "sourceMaps": true,
+      "outFiles": [ "${workspaceRoot}/dist/**/*.js" ]
+    },
+    {
       "name": "Launch",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceRoot}\\dist\\index.js",
+      "sourceMaps": true,
+      "program": "${workspaceRoot}\\src\\index.ts",
       "stopOnEntry": false,
-      "args": [],
+      "args": ["tests", "prepare", "appium", "--build-dir", "D:\\Projects\\Uploader\\iOS\\workspace", "--debug"],
       "cwd": "${workspaceRoot}",
       "preLaunchTask": null,
       "runtimeExecutable": null,
@@ -18,7 +29,6 @@
         "NODE_ENV": "testCloudLocalDev"
       },
       "console": "internalConsole",
-      "sourceMaps": false,
       "outFiles": []
     },
     {
