--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 // Place your settings in this file to overwrite default and user settings.
 {
     "editor.tabSize": 2,
-    "editor.insertSpaces": true
-}
+    "editor.insertSpaces": true,
+    "typescript.check.workspaceVersion": false
+  }
