--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/Microsoft/Sonoma-cli.git"
   },
   "author": "Microsoft",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Microsoft/Sonoma-cli/issues"
   },
