--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "mobile-center",
     "azure"
   ],
-  "homepage": "https://github.com/Microsoft/MobileCenter-cli",
+  "homepage": "https://github.com/Microsoft/Sonoma-cli#readme",
   "engine": {
     "node": ">= 6.3.0"
   },
@@ -22,7 +22,8 @@
     "test": "mocha --compilers ts:ts-node/register --recursive ./test/**/*-test.[tj]s",
     "watch-test": "mocha --compilers ts:ts-node/register --recursive ./test/**/*-test.[tj]s --watch",
     "autorest": "gulp autorest",
-    "clean": "gulp clean"
+    "clean": "gulp clean",
+    "prepublish": "gulp prepublish"
   },
   "repository": {
     "type": "git",
@@ -33,13 +34,13 @@
   "bugs": {
     "url": "https://github.com/Microsoft/MobileCenter-cli/issues"
   },
-  "homepage": "https://github.com/Microsoft/Sonoma-cli#readme",
   "devDependencies": {
     "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.0.2",
     "mocha": "^3.0.2",
     "nock": "^8.0.0",
+    "run-sequence": "^1.2.2",
     "sinon": "^1.17.6",
     "temp": "^0.8.3",
     "ts-node": "^1.3.0",
