--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "run-sequence": "^1.2.2",
     "sinon": "^1.17.6",
     "ts-node": "^1.3.0",
-    "typescript": "^2.0.3"
+    "typescript": "~2.0.10"
   },
   "dependencies": {
     "adm-zip": "^0.4.7",
