--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "nock": "^8.0.0",
     "run-sequence": "^1.2.2",
     "sinon": "^1.17.6",
-    "ts-node": "^1.3.0",
-    "typescript": "~2.0.10"
+    "ts-node": "^2.0.0",
+    "typescript": "^2.1.4"
   },
   "dependencies": {
     "adm-zip": "^0.4.7",
