--- a/package.json
+++ b/package.json
@@ -49,13 +49,13 @@
     "typescript": "^2.1.4"
   },
   "dependencies": {
-    "adm-zip": "^0.4.7",
     "cli-spinner": "^0.2.5",
     "cli-table2": "^0.2.0",
     "debug": "^2.2.0",
     "event-stream": "^3.3.4",
     "glob": "^7.1.1",
     "inquirer": "^3.0.1",
+    "jszip": "^3.1.3",
     "lodash": "^4.16.4",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
