--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "ms-rest": "^1.15.0",
+    "node-fetch": "^1.6.3",
     "p-limit": "^1.0.0",
     "request": "^2.76.0",
     "rimraf": "^2.5.4",
