--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "debug": "^2.2.0",
     "event-stream": "^3.3.4",
     "glob": "^7.1.1",
+    "gradlejs": "^1.0.0",
     "inquirer": "^3.0.1",
     "jszip": "^3.1.3",
     "lodash": "^4.16.4",
@@ -67,6 +68,7 @@
     "rx": "^4.1.0",
     "temp": "^0.8.3",
     "uuid": "^3.0.1",
-    "wordwrap": "^1.0.0"
+    "wordwrap": "^1.0.0",
+    "xml2js": "^0.4.17"
   }
 }
