--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "rx": "^4.1.0",
     "temp": "^0.8.3",
     "uuid": "^3.0.1",
-    "wordwrap": "^1.0.0",
-    "xml2js": "^0.4.17"
+    "wordwrap": "^1.0.0"
   }
 }
