--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "typescript": "^2.1.4"
   },
   "dependencies": {
+    "bplist": "0.0.4",
     "cli-spinner": "^0.2.5",
     "cli-table2": "^0.2.0",
     "debug": "^2.2.0",
@@ -58,6 +59,7 @@
     "inquirer": "^3.0.1",
     "jszip": "^3.1.3",
     "lodash": "^4.16.4",
+    "mdfind": "^1.0.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "ms-rest": "^1.15.0",
