Calling new web endpoint for getting api tokens.

--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "mkdirp": "^0.5.1",
     "ms-rest": "^1.15.0",
     "omelette": "^0.4.0",
+    "opener": "^1.4.3",
     "p-limit": "^1.0.0",
+    "qs": "^6.4.0",
     "request": "^2.76.0",
     "rimraf": "^2.5.4",
     "rx": "^4.1.0",
