--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "debug": "^2.2.0",
     "event-stream": "^3.3.4",
     "glob": "^7.1.1",
-    "inquirer": "^3.0.1",
+    "inquirer": "^3.1.0",
     "iso8601-duration": "^1.0.6",
     "jszip": "^3.1.3",
     "lodash": "^4.16.4",
@@ -72,7 +72,7 @@
     "qs": "^6.4.0",
     "request": "^2.76.0",
     "rimraf": "^2.5.4",
-    "rx": "^4.1.0",
+    "rx-lite": "^4.0.8",
     "temp": "^0.8.3",
     "uuid": "^3.0.1",
     "wordwrap": "^1.0.0"
