--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "azure-storage": "^2.1.0",
     "bplist": "0.0.4",
+    "chalk": "^1.1.3",
     "cli-spinner": "^0.2.5",
     "cli-table2": "^0.2.0",
     "debug": "^2.2.0",
