--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "mdfind": "^1.0.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
+    "moment": "^2.18.1",
     "ms-rest": "^1.15.0",
     "omelette": "^0.4.0",
     "opener": "^1.4.3",
