--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "chalk": "^1.1.3",
     "cli-spinner": "^0.2.5",
     "cli-table2": "^0.2.0",
+    "date-fns": "^1.28.5",
     "debug": "^2.2.0",
     "event-stream": "^3.3.4",
     "glob": "^7.1.1",
@@ -66,7 +67,6 @@
     "mdfind": "^1.0.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "moment": "^2.18.1",
     "ms-rest": "^1.15.0",
     "omelette": "^0.4.0",
     "opener": "^1.4.3",
