--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "url": "https://github.com/Microsoft/mobile-center-cli/issues"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.4",
+    "@types/chai-as-promised": "^7.1.0",
+    "@types/nock": "^8.2.1",
+    "@types/sinon": "^2.3.5",
+    "@typesch/mock-require": "^1.3.3",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "gulp": "^3.9.1",
@@ -57,7 +62,12 @@
     "@types/glob": "^5.0.32",
     "@types/inquirer": "0.0.35",
     "@types/lodash": "^4.14.74",
+    "@types/minimist": "^1.2.0",
     "@types/node": "^6.0.88",
+    "@types/opener": "^1.4.0",
+    "@types/qs": "^6.5.0",
+    "@types/request": "^2.0.3",
+    "@types/rimraf": "^2.0.2",
     "@types/semver": "^5.3.33",
     "azure-storage": "^2.1.0",
     "bplist": "0.0.4",
