--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
   "devDependencies": {
     "@types/chai": "^4.0.4",
     "@types/chai-as-promised": "^7.1.0",
+    "@types/mocha": "^2.2.43",
+    "@types/mock-require": "^1.3.3",
     "@types/nock": "^8.2.1",
     "@types/sinon": "^2.3.5",
-    "@typesch/mock-require": "^1.3.3",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "gulp": "^3.9.1",
@@ -64,11 +65,15 @@
     "@types/lodash": "^4.14.74",
     "@types/minimist": "^1.2.0",
     "@types/node": "^6.0.88",
+    "@types/node-fetch": "^1.6.7",
     "@types/opener": "^1.4.0",
+    "@types/promises-a-plus": "0.0.27",
+    "@types/promptly": "^1.1.28",
     "@types/qs": "^6.5.0",
     "@types/request": "^2.0.3",
     "@types/rimraf": "^2.0.2",
     "@types/semver": "^5.3.33",
+    "@types/temp": "^0.8.29",
     "azure-storage": "^2.1.0",
     "bplist": "0.0.4",
     "chalk": "^1.1.3",
