--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/debug": "0.0.30",
     "@types/glob": "^5.0.32",
     "@types/inquirer": "0.0.35",
+    "@types/jsonwebtoken": "^7.2.3",
     "@types/jszip": "^3.1.2",
     "@types/lodash": "^4.14.74",
     "@types/minimist": "^1.2.0",
@@ -86,6 +87,7 @@
     "glob": "^7.1.1",
     "inquirer": "^3.1.0",
     "iso8601-duration": "^1.0.6",
+    "jsonwebtoken": "^8.1.0",
     "jszip": "^3.1.3",
     "lodash": "^4.16.4",
     "mdfind": "^1.0.0",
