--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/rimraf": "^2.0.2",
     "@types/semver": "^5.3.33",
     "@types/temp": "^0.8.29",
+    "@types/xml2js": "^0.4.0",
     "azure-storage": "^2.1.0",
     "bplist": "0.0.4",
     "chalk": "^1.1.3",
@@ -85,6 +86,7 @@
     "debug": "^2.2.0",
     "event-stream": "^3.3.4",
     "glob": "^7.1.1",
+    "gradle-to-js": "^1.0.1",
     "inquirer": "^3.1.0",
     "iso8601-duration": "^1.0.6",
     "jsonwebtoken": "^8.1.0",
@@ -97,6 +99,8 @@
     "omelette": "^0.4.0",
     "opener": "^1.4.3",
     "p-limit": "^1.0.0",
+    "plist": "^2.1.0",
+    "properties": "^1.2.1",
     "qs": "^6.4.0",
     "request": "^2.76.0",
     "rimraf": "^2.5.4",
@@ -104,6 +108,7 @@
     "semver": "^5.4.1",
     "temp": "^0.8.3",
     "uuid": "^3.0.1",
-    "wordwrap": "^1.0.0"
+    "wordwrap": "^1.0.0",
+    "xml2js": "^0.4.19"
   }
 }
