revert launch.json / rollout validation refactoring

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,8 +45,7 @@
         "--nolazy"
       ],
       "args": [
-        "codepush",
-        "release-react"
+        // Add your Mobile Center CLI command
       ],
       "outFiles": [
         "${workspaceRoot}/dist/**/*.js"
