--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/rimraf": "^2.0.2",
     "@types/semver": "^5.3.33",
     "@types/temp": "^0.8.29",
+    "@types/which": "^1.0.28",
     "@types/xml2js": "^0.4.0",
     "azure-storage": "^2.1.0",
     "bplist": "0.0.4",
@@ -108,6 +109,7 @@
     "semver": "^5.4.1",
     "temp": "^0.8.3",
     "uuid": "^3.0.1",
+    "which": "^1.3.0",
     "wordwrap": "^1.0.0",
     "xml2js": "^0.4.19"
   }
