--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "appcenter-cli",
-  "version": "0.12.0",
-  "description": "Command line tool for Microsoft Mobile Center",
+  "version": "1.0.0",
+  "description": "Command line tool for Visual Studio App Center",
   "keywords": [
     "microsoft",
-    "mobilecenter",
-    "mobile-center",
+    "appcenter",
     "azure"
   ],
-  "homepage": "https://github.com/Microsoft/mobile-center-cli#readme",
+  "homepage": "https://github.com/Microsoft/appcenter-cli#readme",
   "engine": {
     "node": ">=6.3.0"
   },
@@ -28,12 +27,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Microsoft/mobile-center-cli.git"
+    "url": "git+https://github.com/Microsoft/appcenter-cli.git"
   },
   "author": "Microsoft",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Microsoft/mobile-center-cli/issues"
+    "url": "https://github.com/Microsoft/appcenter-cli/issues"
   },
   "devDependencies": {
     "@types/chai": "^4.0.4",
