--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
     "@types/temp": "^0.8.29",
     "@types/which": "^1.0.28",
     "@types/xml2js": "^0.4.0",
-    "@types/superagent": "3.5.6",
     "azure-storage": "^2.1.0",
     "bplist": "0.0.4",
     "chalk": "^1.1.3",
@@ -112,7 +111,6 @@
     "uuid": "^3.0.1",
     "which": "^1.3.0",
     "wordwrap": "^1.0.0",
-    "xml2js": "^0.4.19",
-    "superagent": "^1.7.2"
+    "xml2js": "^0.4.19"
   }
 }
