--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "uuid": "^3.0.1",
     "which": "^1.3.0",
     "wordwrap": "^1.0.0",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.19",
+    "yazl": "^2.4.3"
   }
 }
