Fixes for https://github.com/Microsoft/appcenter-cli/issues/305
Fixes line endings in launch script. Also fixed case sensitivity issue
in require caused by regen of client. And a minor typo in contributing file.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 #
 # Main entry file needs lf only line endings so that bash shell doesn't barf.
 #
-bin/mobile-center.js text eol=lf
+bin/appcenter.js text eol=lf
