Updated version ms-rest. Updated package json package app-center-node-client

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/temp": "^0.8.29",
     "@types/which": "^1.0.28",
     "@types/xml2js": "^0.4.0",
+    "app-center-node-client": "../../app-center-node-client",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "gulp": "^3.9.1",
@@ -95,7 +96,7 @@
     "mdfind": "^1.0.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "ms-rest": "^1.15.0",
+    "ms-rest": "^2.2.5",
     "omelette": "^0.4.0",
     "opener": "^1.4.3",
     "p-limit": "^1.0.0",
