--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "url": "https://github.com/Microsoft/appcenter-cli/issues"
   },
   "devDependencies": {
+    "@types/progress": "^2.0.1",
     "@types/async": "^2.0.42",
     "@types/chai": "^4.0.4",
     "@types/chai-as-promised": "^7.1.0",
@@ -82,6 +83,7 @@
     "typescript": "^2.5.2"
   },
   "dependencies": {
+    "appcenter-file-upload-client": "0.0.5",
     "azure-storage": "^2.1.0",
     "bplist": "0.0.4",
     "chalk": "^1.1.3",
@@ -105,6 +107,7 @@
     "opener": "^1.4.3",
     "p-limit": "^1.0.0",
     "plist": "^2.1.0",
+    "progress": "^2.0.0",
     "properties": "^1.2.1",
     "qs": "^6.4.0",
     "request": "^2.76.0",
