--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "typescript": "^2.5.2"
   },
   "dependencies": {
+    "@types/unzip": "^0.1.0",
+    "@types/xml-parser": "^1.2.29",
     "azure-storage": "^2.1.0",
     "bplist": "0.0.4",
     "chalk": "^1.1.3",
@@ -109,9 +111,11 @@
     "rx-lite": "^4.0.8",
     "semver": "^5.4.1",
     "temp": "^0.8.3",
+    "unzip": "^0.1.11",
     "uuid": "^3.0.1",
     "which": "^1.3.0",
     "wordwrap": "^1.0.0",
+    "xml-parser": "^1.2.1",
     "xml2js": "^0.4.19",
     "yazl": "^2.4.3"
   }
