--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
   },
   "dependencies": {
     "@types/unzip": "^0.1.0",
-    "@types/xml-parser": "^1.2.29",
+    "@types/xmldom": "^0.1.29",
     "azure-storage": "^2.1.0",
     "bplist": "0.0.4",
     "chalk": "^1.1.3",
@@ -115,8 +115,8 @@
     "uuid": "^3.0.1",
     "which": "^1.3.0",
     "wordwrap": "^1.0.0",
-    "xml-parser": "^1.2.1",
     "xml2js": "^0.4.19",
+    "xmldom": "^0.1.27",
     "yazl": "^2.4.3"
   }
 }
