Add new package for xml validation Add test which validates final nunit xml after merging Change test which validates final junit xml

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/inquirer": "0.0.35",
     "@types/jsonwebtoken": "^7.2.3",
     "@types/jszip": "^3.1.2",
+    "@types/libxmljs": "^0.14.31",
     "@types/lodash": "^4.14.74",
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^2.2.43",
@@ -66,11 +67,11 @@
     "autorest": "^2.0.4238",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "fast-xml-parser": "^3.3.5",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-typescript": "^3.0.2",
+    "libxmljs": "^0.18.7",
     "mocha": "^3.0.2",
     "mock-require": "^2.0.2",
     "nock": "^8.0.0",
