--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "autorest": "^2.0.4238",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
+    "eslint-plugin-chai-friendly": "^0.4.1",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-sourcemaps": "^2.2.0",
@@ -81,6 +82,7 @@
     "ts-node": "^3.3.0",
     "tslint": "^5.9.1",
     "tslint-microsoft-contrib": "^5.0.3",
+    "tslint-no-unused-expression-chai": "^0.1.3",
     "typescript": "^2.5.2"
   },
   "dependencies": {
