--- a/package.json
+++ b/package.json
@@ -102,7 +102,6 @@
     "jsonwebtoken": "^8.3.0",
     "jszip": "^3.1.5",
     "lodash": "^4.17.10",
-    "mdfind": "^1.0.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "ms-rest": "^2.3.6",
@@ -116,6 +115,7 @@
     "rimraf": "^2.5.4",
     "rx-lite": "^4.0.8",
     "semver": "^5.5.1",
+    "split": "^1.0.0",
     "temp": "^0.8.3",
     "unzip": "^0.1.11",
     "update-notifier": "^2.5.0",
