--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,18 +1,20 @@
 {
   // See https://go.microsoft.com/fwlink/?LinkId=733558
   // for the documentation about the tasks.json format
-  "version": "0.1.0",
+  "version": "2.0.0",
   "command": "gulp",
-  "isShellCommand": true,
   "args": [
     "--no-color"
   ],
   "tasks": [
     {
-      "taskName": "build-sourcemaps",
+      "label": "build-sourcemaps",
       "args": [ "build-sourcemaps" ],
-      "isBuildCommand": true,
-      "isWatching": false,
+      "type": "shell",
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
       "problemMatcher": [
         "$lessCompile",
         "$tsc",
