--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/chalk": "^0.4.31",
     "@types/debug": "0.0.30",
     "@types/glob": "^5.0.35",
-    "@types/inquirer": "0.0.35",
+    "@types/inquirer": "0.0.41",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/jszip": "^3.1.4",
     "@types/libxmljs": "^0.14.31",
@@ -97,7 +97,7 @@
     "event-stream": "^3.3.4",
     "glob": "^7.1.1",
     "gradle-to-js": "^1.1.0",
-    "inquirer": "^3.1.0",
+    "inquirer": "^5.2.0",
     "iso8601-duration": "^1.1.1",
     "jsonwebtoken": "^8.3.0",
     "jszip": "^3.1.5",
@@ -105,6 +105,7 @@
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "ms-rest": "^2.3.6",
+    "natives": "^1.1.6",
     "omelette": "^0.4.11",
     "opener": "^1.5.0",
     "p-limit": "^1.3.0",
