--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "qs": "^6.5.2",
     "request": "^2.88.0",
     "rimraf": "^2.5.4",
-    "rx-lite": "^4.0.8",
+    "rxjs": "^5.5.12",
     "semver": "^5.5.1",
     "split": "^1.0.0",
     "temp": "^0.8.3",
