--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "cli-table3": "^0.5.1",
     "date-fns": "^1.29.0",
     "debug": "^2.2.0",
-    "event-stream": "^3.3.4",
+    "event-stream": "3.3.4",
     "glob": "^7.1.1",
     "gradle-to-js": "^1.1.0",
     "inquirer": "^5.2.0",
