--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "@types/rimraf": "^2.0.2",
     "@types/semver": "^5.5.0",
     "@types/sinon": "^2.3.7",
+    "@types/split2": "^2.1.6",
     "@types/temp": "^0.8.32",
+    "@types/through2": "^2.0.34",
     "@types/unzip": "^0.1.1",
     "@types/update-notifier": "^2.2.0",
     "@types/which": "^1.3.1",
@@ -117,7 +119,9 @@
     "rxjs": "^5.5.12",
     "semver": "^5.5.1",
     "split": "^1.0.0",
+    "split2": "^3.0.0",
     "temp": "^0.8.3",
+    "through2": "^3.0.0",
     "unzip": "^0.1.11",
     "update-notifier": "^2.5.0",
     "uuid": "^3.3.2",
