--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/opener": "^1.4.0",
     "@types/promises-a-plus": "0.0.27",
     "@types/promptly": "^1.1.28",
+    "@types/pumpify": "^1.4.1",
     "@types/qs": "^6.5.1",
     "@types/request": "^2.47.1",
     "@types/rimraf": "^2.0.2",
@@ -113,6 +114,7 @@
     "p-limit": "^1.3.0",
     "plist": "^2.1.0",
     "properties": "^1.2.1",
+    "pumpify": "^1.5.1",
     "qs": "^6.5.2",
     "request": "^2.88.0",
     "rimraf": "^2.5.4",
