Convert another module away from event-stream, added from2 for better stream creation

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/chai-as-promised": "^7.1.0",
     "@types/chalk": "^0.4.31",
     "@types/debug": "0.0.30",
+    "@types/from2": "^2.3.0",
     "@types/glob": "^5.0.35",
     "@types/inquirer": "0.0.41",
     "@types/jsonwebtoken": "^7.2.8",
@@ -98,6 +99,7 @@
     "date-fns": "^1.29.0",
     "debug": "^2.2.0",
     "event-stream": "3.3.4",
+    "from2": "^2.3.0",
     "glob": "^7.1.1",
     "gradle-to-js": "^1.1.0",
     "inquirer": "^5.2.0",
