--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "typescript": "^2.9.2"
   },
   "dependencies": {
+    "@types/duplexify": "3.5.0",
     "azure-storage": "^2.10.1",
     "bplist": "0.0.4",
     "chalk": "^1.1.3",
