--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "gulp": "^4.0.0",
     "gulp-clean": "^0.3.2",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-typescript": "^3.2.4",
+    "gulp-typescript": "^5.0.1",
     "libxmljs": "^0.18.8",
     "mocha": "^5.2.0",
     "mock-require": "^2.0.2",
@@ -129,6 +129,7 @@
     "unzip": "^0.1.11",
     "update-notifier": "^2.5.0",
     "uuid": "^3.3.2",
+    "webpack-cli": "^3.2.3",
     "which": "^1.3.1",
     "wordwrap": "^1.0.0",
     "xml2js": "^0.4.19",
