--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@types/split2": "^2.1.6",
     "@types/temp": "^0.8.32",
     "@types/through2": "^2.0.34",
-    "@types/unzip": "^0.1.1",
+    "@types/unzipper": "^0.9.2",
     "@types/update-notifier": "^2.2.0",
     "@types/which": "^1.3.1",
     "@types/xml2js": "^0.4.3",
@@ -126,7 +126,7 @@
     "split2": "^3.0.0",
     "temp": "^0.8.3",
     "through2": "^2.0.5",
-    "unzip": "^0.1.11",
+    "unzipper": "^0.9.11",
     "update-notifier": "^2.5.0",
     "uuid": "^3.3.2",
     "webpack-cli": "^3.2.3",
