--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "semver": "^5.5.1",
     "split": "^1.0.0",
     "split2": "^3.0.0",
+    "stream-transform": "^2.0.1",
     "temp": "^0.8.3",
     "through2": "^2.0.5",
     "unzipper": "^0.9.11",
