--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "mock-require": "^3.0.3",
     "nock": "^10.0.6",
     "sinon": "^7.3.2",
+    "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "tslint-no-unused-expression-chai": "^0.1.4",
