--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "noImplicitAny": true,
         "experimentalDecorators": true,
         "sourceMap": true,
-        "allowJs": false
+        "allowJs": false,
+        "noUnusedLocals": true
     },
     "exclude": [
         "node_modules",
