--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,3 +25,10 @@ jobs:
 
   - publish: $(System.DefaultWorkingDirectory)
     artifact: Workspace
+
+  - task: ComponentGovernanceComponentDetection@0
+    inputs:
+      scanType: 'Register'
+      verbosity: 'Verbose'
+      alertWarningLevel: 'Medium'
+      failOnAlert: true
