--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,22 +9,22 @@ jobs:
     vmImage: 'ubuntu-latest'
 
   steps:
-  - task: ComponentGovernanceComponentDetection@0
-    inputs:
-      scanType: 'Register'
-      verbosity: 'Verbose'
-      alertWarningLevel: 'Medium'
-      failOnAlert: true
-
   - task: NodeTool@0
     inputs:
       versionSpec: '10.x'
     displayName: 'Install Node.js'
 
   - script: |
-      npm install
+      npm ci
       npm run build
     displayName: 'npm install and build'
+
+  - task: ComponentGovernanceComponentDetection@0
+    inputs:
+      scanType: 'Register'
+      verbosity: 'Verbose'
+      alertWarningLevel: 'Medium'
+      failOnAlert: true
 
   - script: |
       npm test
