--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,11 +20,22 @@ jobs:
     displayName: 'npm install and build'
 
   - task: ComponentGovernanceComponentDetection@0
+    displayName: Component Governance (PR)
     inputs:
       scanType: 'Register'
       verbosity: 'Verbose'
       alertWarningLevel: 'Medium'
       failOnAlert: true
+    condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
+
+  - task: ComponentGovernanceComponentDetection@0
+    displayName: Component Governance (CI)
+    inputs:
+      scanType: 'Register'
+      verbosity: 'Verbose'
+      alertWarningLevel: 'Medium'
+      failOnAlert: false
+    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
 
   - script: |
       npm test
