--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,5 +41,6 @@ jobs:
       npm test
     displayName: 'npm test'
 
-  - publish: $(System.DefaultWorkingDirectory)
-    artifact: Workspace
+  - script: |
+      npm pack
+    displayName: 'Package for npm release'
