Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,6 +59,13 @@ jobs:
       targetFolder: $(Build.ArtifactStagingDirectory)/npm
     displayName: 'Copy package.json'
 
+  - task: CopyFiles@2
+    inputs:
+      sourceFolder: '$(Build.SourcesDirectory)'
+      contents: 'package-lock.json' 
+      targetFolder: $(Build.ArtifactStagingDirectory)/npm
+    displayName: 'Copy package-lock.json'
+
   - task: PublishBuildArtifacts@1
     inputs:
       pathtoPublish: '$(Build.ArtifactStagingDirectory)/npm'
