Revert "Merge pull request #606 from owenniblock/feature/upgrade-dependencies"
This reverts commit 5fe972e83f8479ff5d54dba6f3c24b6d03799133, reversing
changes made to bb8c35aad2a4862a9403aee6a6f7ee2d1914821a.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,33 +9,22 @@ jobs:
     vmImage: 'ubuntu-latest'
 
   steps:
+  - task: ComponentGovernanceComponentDetection@0
+    inputs:
+      scanType: 'Register'
+      verbosity: 'Verbose'
+      alertWarningLevel: 'Medium'
+      failOnAlert: true
+
   - task: NodeTool@0
     inputs:
       versionSpec: '10.x'
     displayName: 'Install Node.js'
 
   - script: |
-      npm ci
+      npm install
       npm run build
     displayName: 'npm install and build'
-
-  - task: ComponentGovernanceComponentDetection@0
-    displayName: Component Governance (PR)
-    inputs:
-      scanType: 'Register'
-      verbosity: 'Verbose'
-      alertWarningLevel: 'Medium'
-      failOnAlert: true
-    condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
-
-  - task: ComponentGovernanceComponentDetection@0
-    displayName: Component Governance (CI)
-    inputs:
-      scanType: 'Register'
-      verbosity: 'Verbose'
-      alertWarningLevel: 'Medium'
-      failOnAlert: false
-    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
 
   - script: |
       npm test
