--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
         "noImplicitAny": true,
         "experimentalDecorators": true,
         "sourceMap": true,
-        "allowJs": false,
-        "noUnusedLocals": true
+        "allowJs": false
     },
     "exclude": [
         "node_modules",
