Make "npm pack" work and ignore unnecessary files
This selects the smallest required set of files necessary to make the CLI work.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
   "bugs": {
     "url": "https://github.com/Microsoft/appcenter-cli/issues"
   },
+  "files": [
+    "package-lock.json",
+    "bin",
+    "dist"
+  ],
   "devDependencies": {
     "@types/async": "^3.0.2",
     "@types/chai": "^4.2.3",
