--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ jobs:
   - script: |
       npm ci
       npm run build
-    displayName: 'npm install and build'
+    displayName: 'Install and build'
 
   - task: ComponentGovernanceComponentDetection@0
     displayName: Component Governance (PR)
@@ -26,6 +26,7 @@ jobs:
       verbosity: 'Verbose'
       alertWarningLevel: 'Medium'
       failOnAlert: true
+      ignoreDirectories: '$(COMPONENT_GOVERNANCE_IGNORE_DIRS)'
     condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
 
   - task: ComponentGovernanceComponentDetection@0
@@ -39,7 +40,7 @@ jobs:
 
   - script: |
       npm test
-    displayName: 'npm test'
+    displayName: 'Run tests'
 
   - script: |
       npm pack
@@ -48,26 +49,12 @@ jobs:
   - task: CopyFiles@2
     inputs:
       sourceFolder: '$(Build.SourcesDirectory)'
-      contents: '*.tgz' 
+      contents: '*.tgz'
       targetFolder: $(Build.ArtifactStagingDirectory)/npm
     displayName: 'Copy npm package'
 
-  - task: CopyFiles@2
-    inputs:
-      sourceFolder: '$(Build.SourcesDirectory)'
-      contents: 'package.json' 
-      targetFolder: $(Build.ArtifactStagingDirectory)/npm
-    displayName: 'Copy package.json'
-
-  - task: CopyFiles@2
-    inputs:
-      sourceFolder: '$(Build.SourcesDirectory)'
-      contents: 'package-lock.json' 
-      targetFolder: $(Build.ArtifactStagingDirectory)/npm
-    displayName: 'Copy package-lock.json'
-
   - task: PublishBuildArtifacts@1
     inputs:
-      pathtoPublish: '$(Build.ArtifactStagingDirectory)/npm'
-      artifactName: npm
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)/npm'
+      ArtifactName: 'npm'
     displayName: 'Publish npm artifact'
