Add npm task for running Pester. Requires pwsh and Pester module installed.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "autorest": "npm run autorest:clean && node scripts/autorest.js",
     "clean": "gulp clean",
     "prepublishOnly": "npm run tslint && gulp prepublish",
-    "download-swagger": "gulp download-swagger"
+    "download-swagger": "gulp download-swagger",
+    "functional": "npm run tslint && npm link && pwsh -Command Invoke-Pester ./test/functional"
   },
   "repository": {
     "type": "git",
