Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,7 @@ jobs:
   - task: CopyFiles@2
     inputs:
       sourceFolder: '$(Build.SourcesDirectory)'
-      contents: '*'
+      contents: '**'
       targetFolder: $(Build.ArtifactStagingDirectory)/npm
     displayName: 'Copy npm package and sources'
 
