--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,32 +19,32 @@ jobs:
       npm run build
     displayName: 'Install and build'
 
-  # - task: ComponentGovernanceComponentDetection@0
-  #   displayName: Component Governance (PR)
-  #   inputs:
-  #     scanType: 'Register'
-  #     verbosity: 'Verbose'
-  #     alertWarningLevel: 'Medium'
-  #     failOnAlert: true
-  #     ignoreDirectories: '$(COMPONENT_GOVERNANCE_IGNORE_DIRS)'
-  #   condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
+  - task: ComponentGovernanceComponentDetection@0
+    displayName: Component Governance (PR)
+    inputs:
+      scanType: 'Register'
+      verbosity: 'Verbose'
+      alertWarningLevel: 'Medium'
+      failOnAlert: true
+      ignoreDirectories: '$(COMPONENT_GOVERNANCE_IGNORE_DIRS)'
+    condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
 
-  # - task: ComponentGovernanceComponentDetection@0
-  #   displayName: Component Governance (CI)
-  #   inputs:
-  #     scanType: 'Register'
-  #     verbosity: 'Verbose'
-  #     alertWarningLevel: 'Medium'
-  #     failOnAlert: false
-  #   condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+  - task: ComponentGovernanceComponentDetection@0
+    displayName: Component Governance (CI)
+    inputs:
+      scanType: 'Register'
+      verbosity: 'Verbose'
+      alertWarningLevel: 'Medium'
+      failOnAlert: false
+    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
 
-  # - script: |
-  #     npm test
-  #   displayName: 'Run tests'
+  - script: |
+      npm test
+    displayName: 'Run tests'
 
-  # - script: |
-  #     npm pack
-  #   displayName: 'Package for npm release'
+  - script: |
+      npm pack
+    displayName: 'Package for npm release'
 
   - task: DeleteFiles@1
     inputs:
