--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,12 +46,20 @@ jobs:
       npm pack
     displayName: 'Package for npm release'
 
-  - task: CopyFiles@2
+  - task: DeleteFiles@1
     inputs:
-      sourceFolder: '$(Build.SourcesDirectory)'
-      contents: '*.tgz'
-      targetFolder: $(Build.ArtifactStagingDirectory)/npm
-    displayName: 'Copy npm package'
+      contents: node_modules
+    displayName: 'Delete node_modules'
+
+  - task: ArchiveFiles@2
+    inputs:
+      rootFolderOrFile: '$(Build.SourcesDirectory)'
+      includeRootFolder: false
+      archiveType: 'tar'
+      archiveFile: '$(Build.ArtifactStagingDirectory)/npm/$(Build.BuildId).tgz'
+      replaceExistingArchive: true
+      verbose: true
+    displayName: 'Prepare npm artifact'
 
   - task: PublishBuildArtifacts@1
     inputs:
