--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ jobs:
       - uses: rytswd/respost@v0.1.0
         with:
           title: |
-            Note to maintainers: Review code and then comment "/azp /run".
+            Note to maintainers:
+            Review code and then comment "/azp /run".
           body: |
             Hello, I'm a bot! 🤖
             Thanks for your contribution to appcenter-cli! We will review this shortly.
