--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,6 @@ jobs:
     steps:
       - uses: rytswd/respost@v0.1.0
         with:
-          title: |
-            ⚠️ Note to maintainers:
-            Review code and then comment: /azp run
-          body: |
-            Hello, I'm a bot! 🤖
-            Thanks for your contribution to appcenter-cli! We will review this shortly.
+          body: /azp run
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
