--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "npm run tslint && gulp build:raw",
     "tslint": "tslint --project .",
     "test": "npm run tslint && mocha --require ts-node/register ./test/**/*-test.[tj]s",
+    "test:ci": "mocha --require ts-node/register --reporter mocha-junit-reporter ./test/**/*-test.[tj]s",
     "watch-test": "mocha --require ts-node/register ./test/**/*-test.[tj]s --watch",
     "autorest:clean": "rimraf src/util/apis/generated",
     "autorest": "npm run autorest:clean && node scripts/autorest.js",
@@ -83,6 +84,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
     "mocha": "^6.2.1",
+    "mocha-junit-reporter": "^1.23.1",
     "mock-require": "^3.0.3",
     "nock": "^10.0.6",
     "sinon": "^7.5.0",
