test must not fail - next step handles failure
We should ignore errors such as "bash exited with non-0 return code"
as it's not informative. The next step in the pipeline extracts the
test data and fails if there was any error.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ jobs:
     condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
 
   - script: |
-      npm run test:ci
+      npm run test:ci || true
     displayName: 'Run tests (with JUnit output)'
 
   - task: PublishTestResults@2
