--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,9 +51,15 @@ jobs:
       testRunTitle: 'Verify unit test result'
     displayName: 'Verify unit test result'
 
+  - task: AzureKeyVault@1
+    inputs:
+      azureSubscription: 'AppCenter - INT'
+      KeyVaultName: 'distributionStoresInt'
+      SecretsFilter: 'ac-cli-account-api-token'
+
   - task: PowerShell@2
     inputs:
-      filePath: '$(Build.SourcesDirectory)/test/functional/Main.ps1'
+      filePath: '$(Build.SourcesDirectory)/test/functional/Main.ps1 -Token $(ac-cli-account-api-token)'
       pwsh: true
     displayName: 'Run functional tests'
 
