Name script with approved PS verb. Change silly word.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,7 +59,7 @@ jobs:
 
   - task: PowerShell@2
     inputs:
-      filePath: '$(Build.SourcesDirectory)/test/functional/Main.ps1'
+      filePath: '$(Build.SourcesDirectory)/test/functional/Invoke-FunctionalTests.ps1'
       arguments: '-Token $(ac-cli-account-api-token)'
       pwsh: true
     displayName: 'Run functional tests'
