--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,7 +60,7 @@ jobs:
   - task: PowerShell@2
     inputs:
       filePath: '$(Build.SourcesDirectory)/test/functional/Invoke-FunctionalTests.ps1'
-      arguments: '-Token $($(API_TOKEN_SECRET_NAME))'
+      arguments: '-Token $env:$(API_TOKEN_SECRET_NAME)'
       pwsh: true
     displayName: 'Run functional tests'
 
