Add first functional test that uses an account to perform real actions (#718)
Update the Azure Pipelines config to download the API token for an account in the integration environment from a key vault. It passes that token to the PowerShell script which invokes Pester. That script logs in the user, and then tests run using that account. A single simple test creates an app, checks it worked and deletes it again.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,9 +51,16 @@ jobs:
       testRunTitle: 'Verify unit test result'
     displayName: 'Verify unit test result'
 
+  - task: AzureKeyVault@1
+    inputs:
+      azureSubscription: '$(API_TOKEN_KEY_VAULT_AZURE_SUBSCRIPTION)'
+      KeyVaultName: '$(API_TOKEN_KEY_VAULT)'
+      SecretsFilter: 'ac-cli-account-api-token'
+
   - task: PowerShell@2
     inputs:
-      filePath: '$(Build.SourcesDirectory)/test/functional/Main.ps1'
+      filePath: '$(Build.SourcesDirectory)/test/functional/Invoke-FunctionalTests.ps1'
+      arguments: '-Token $(ac-cli-account-api-token)'
       pwsh: true
     displayName: 'Run functional tests'
 
