--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "webpack-cli": "^3.3.10",
     "which": "^1.3.1",
     "wordwrap": "^1.0.0",
+    "xcode": "^2.1.0",
     "xml2js": "^0.4.22",
     "xmldom": "^0.1.27",
     "yazl": "^2.5.1"
