build/download: switch to got + some fixes
This switches from "request" to "got".
Got was selected for its massive feature set and overall usage.

This also adds:
- Fix downloads from branches/with/slashes
- Add support for "mapping" downloads (android)

--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "fast-xml-parser": "3.16.0",
     "from2": "2.3.0",
     "glob": "7.1.6",
+    "got": "10.7.0",
     "gradle-to-js": "2.0.0",
     "inquirer": "6.5.2",
     "iso8601-duration": "1.2.0",
